# VisionProject

./: .gitignore  README.md
ICPtest/: CMakeLists.txt
ICPtest/src/: icp.cpp
PoseDetector/: CMakeLists.txt
PoseDetector/src/: VFHPoseEstimation.cpp  VFHPoseEstimation.h  vfhTest.cpp  vfhTrain.cpp
pclVFHStest/: .gitignore  CMakeLists.txt  vfhTest.cpp  vfhTrain.cpp
pclVFHStest/src/: vfhTest.cpp  vfhTrain.cpp
vfhsLibSearch/: .gitignore  CMakeLists.txt  rotObj.cpp  vfhTest.cpp  vfhTestwRot.cpp  vfhTrain.cpp
vfhsLibSearch/pr2Data/: pointcloud1.txt  pointcloud1.txt~  pointcloud10.txt  pointcloud2.txt  pointcloud3.txt  pointcloud4.txt  pointcloud5.txt  pointcloud6.txt  pointcloud6.txt~  pointcloud7.txt  pointcloud8.txt  pointcloud9.txt
vfhsLibSearch/src/: rotObj.cpp  vfhLib.cpp  vfhLib.h  vfhTest.cpp  vfhTestwRot.cpp  vfhTrain.cpp  visClouds.cpp
